--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 events {
-  worker_connections 768;
+  worker_connections 512;
 }
 
 http {
@@ -9,24 +9,25 @@ http {
   gzip_min_length 1000;
 
   server {
-    listen 8080;
+    listen 80;
 
-    # # Nginx will reject anything not matching /api
-    # location /api {
-    #   # Reject requests with unsupported HTTP method
-    #   if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PUT|DELETE)$) {
-    #     return 405;
-    #   }
+    # Nginx will reject anything not matching /
+    location / {
+      # Reject requests with unsupported HTTP method
+      if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PUT|DELETE)$) {
+        return 405;
+      }
 
-    #   # Only requests matching the whitelist expectations will
-    #   # get sent to the application server
-    #   proxy_pass http://app:3000;
-    #   proxy_http_version 1.1;
-    #   proxy_set_header Upgrade $http_upgrade;
-    #   proxy_set_header Connection 'upgrade';
-    #   proxy_set_header Host $host;
-    #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #   proxy_cache_bypass $http_upgrade;
-    # }
+      # Only requests matching the whitelist expectations will
+      # get sent to the application server
+      proxy_pass http://something-of-the-day:80;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_cache_bypass $http_upgrade;
+    }
   }
 }
