using certbot to generate certs

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,12 @@
 FROM nginx:1.19
+
+RUN apt-get update
+
+RUN apt-get install -y software-properties-common \
+    && add-apt-repository ppa:certbot/certbot
+
+RUN apt-get install -y gpg certbot python-certbot-nginx cron
+
+COPY 30-ssl-setup.sh /docker-entrypoint.d
+
 COPY nginx.conf /etc/nginx/nginx.conf
