--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,30 @@ http {
   gzip_min_length 1000;
 
   server {
-    listen 80;
+    server_name ricardomarques.dev www.ricardomarques.dev;
+
+    # Nginx will reject anything not matching /
+    location / {
+      # Reject requests with unsupported HTTP method
+      if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PUT|DELETE)$) {
+        return 405;
+      }
+
+      # Only requests matching the whitelist expectations will
+      # get sent to the application server
+      proxy_pass http://something-of-the-day:80;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_cache_bypass $http_upgrade;
+    }
+  }
+
+  server {
+    server_name something.ricardomarques.dev;
 
     # Nginx will reject anything not matching /
     location / {
