--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -7,6 +7,8 @@ RUN apt-get install -y software-properties-common \
 
 RUN apt-get install -y gpg certbot python-certbot-nginx cron
 
-COPY 30-ssl-setup.sh /docker-entrypoint.d
-
 COPY nginx.conf /etc/nginx/nginx.conf
+
+COPY run.sh /
+
+CMD ["./run.sh"]
