--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
   gzip on;
   gzip_proxied any;
-  gzip_types text/plain application/json;
+  gzip_types text/plain text/css application/javascript application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml image/svg;
   gzip_min_length 1000;
 
   server {
