--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -86,4 +86,34 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
     }
   }
+
+  server {
+    server_name wasmmandel.ricardomarques.dev;
+
+    # Nginx will reject anything not matching /
+    location / {
+      # Reject requests with unsupported HTTP method
+      if ($request_method !~ ^(GET)$) {
+        return 405;
+      }
+
+      proxy_cache static_cache;
+      proxy_cache_valid 200 302 1h;
+      proxy_cache_valid 404 1m;
+      proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+      add_header X-Proxy-Cache $upstream_cache_status;
+
+      # Ignore cache-busting headers
+      proxy_ignore_headers Cache-Control;
+
+      # Only requests matching the whitelist expectations will
+      # get sent to the application server
+      proxy_pass https://hobby-static-websites.s3.eu-west-2.amazonaws.com/webasm/;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Real-IP $remote_addr;
+    }
+  }
 }
