--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -60,13 +60,17 @@ http {
   server {
     server_name solar.ricardomarques.dev;
 
+    location = / {
+        rewrite ^ /index.html permanent;
+    }
+
     # Nginx will reject anything not matching /
     location / {
       # Reject requests with unsupported HTTP method
       if ($request_method !~ ^(GET)$) {
         return 405;
       }
-
+      
       proxy_cache static_cache;
       proxy_cache_valid 200 302 1h;
       proxy_cache_valid 404 1m;
@@ -89,6 +93,10 @@ http {
 
   server {
     server_name wasmmandel.ricardomarques.dev;
+
+    location = / {
+        rewrite ^ /index.html permanent;
+    }
 
     # Nginx will reject anything not matching /
     location / {
